# blue-academy-pre-sales-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  logging_config.py  main.py  pyproject.toml  requirements.txt
assistants/sales/: general_agent.py  guardrail_agent.py  pre_sales_agent.py  schemas.py  tools.py
frontend-embedding/: chat-widget-original.js  chat-widget.js  index.html
model/: input_schema.py  output_schema.py
pre_sales_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
route/: agent_route.py  internal_route.py
services/: auth_middleware.py  data_handler.py  ingestion.py  mongo_db.py  postgres_db.py  redis_service.py  session_handler.py  similarity.py  sqlite_db.py  weaviate.py  weaviate_service.py
