[tool.setuptools.packages.find]
where = ["."]
include = ["model", "route", "services", "assistants"]
exclude = ["frontend", "saved_files"]


[project]
name = "pre-sales-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "ctranslate2>=4.6.2",
    "fastapi>=0.124.4",
    "ffmpeg>=1.4",
    "langsmith[openai-agents]>=0.5.0",
    "openai-agents[sqlalchemy]>=0.6.2",
    "py-dotenv>=0.1",
    "pymongo[srv]>=4.15.5",
    "python-dotenv>=1.2.1",
    "redis[hiredis]>=7.1.0",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
    "weaviate[client]>=0.1.2",
    "weaviate-client>=4.18.3",
]
